--- a/index.html
+++ b/index.html
@@ -217,6 +217,15 @@
       opacity: .8;
     }
 
+    .text {
+      font-family: Handlee;
+      font-size: 20px;
+    }
+
+      .text2 {
+      font-family: Handlee;
+     
+    }
     /* ===== DESKTOP / LAPTOP ===== */
     @media (min-width: 769px) {
       .login-btn {
@@ -365,6 +374,7 @@
       </div>
 
       <h2 class="title"><span class="big">VakációVágyó</span></h2>
+      <span class="big text"><i>Orosz Család</i></span></h2>
 
       <div class="slide-area">
         <img src="repulo.png" alt="Repülő animáció" class="slider">
@@ -382,12 +392,12 @@
 
   <main>
     <div class="left-text">
-      <p class="main-line"><b><i>Fogjunk össze 🤝, tegyünk félre 💰, és utazzunk az egyenlítő környékére. 🌎</i></b></p>
+      <p class="main-line text2"><b><i>Fogjunk össze 🤝, tegyünk félre 💰, és utazzunk az egyenlítő környékére. 🌎</i></b></p>
       <p class="subline">Ne feledd! Sok kicsi, sokra megy! </p>
 
       <!-- === ÚJ: Visszaszámláló a "Ne feledd!" szöveg alatt === -->
       <section class="countdown-inline" aria-label="Visszaszámláló">
-        <div class="countdown-title color2">Visszaszámlálás a nyárig</div>
+        <div class="countdown-title color2">VISSZASZÁMLÁLÁS NYÁRIG</div>
         <div class="countdown">
           <div class="countdown-item"><div class="number" id="days2">00</div><div class="label">NAP</div></div>
           <div class="countdown-item"><div class="number" id="hours2">00</div><div class="label">ÓRA</div></div>
