--- a/akciok.html
+++ b/akciok.html
@@ -256,7 +256,8 @@
       <div class="card-body">
         <h3 class="card-title"> Sok kicsi, sokra megy! </h3>
         <p class="card-text"> <b>Promóciós időszak: <br> 2025. október 01. - 2026. június 05.</b></p>
-        <a href="sksm.html"><button>ELOLVASOM A RÉSZLETEKET! </button></a>
+        <p><b><i>A játékszabályzatot <a href="sksm.html">ide kattintva</a> éred el!</p></i></b>
+        <a href="teljesitesinaplo.html"><button>MEGNÉZEM A TELJESÍTÉSI NAPLÓT! </button></a>
       </div>
     </article> <br>
 
