--- a/akciok.html
+++ b/akciok.html
@@ -247,7 +247,7 @@
             db</b></p>
         <p class="card-text"><b><i>A blokkszámlálót minden vasárnap 21:00-kor frissítjük!</i></b> <br><i>Utolsó
             frissítés: 2025.10.12. 21:00</i></p>
-        <a href="https://7dayspromo.hu/"><button>IRÁNY A JÁTÉK WEBOLDALA!</button></a>
+        <a href="https://7dayspromo.hu/"><button>IRÁNY A JÁTÉK WEBOLDALA</button></a>
       </div>
     </article> <br>
 
@@ -257,7 +257,7 @@
         <h3 class="card-title"> Sok kicsi, sokra megy! </h3>
         <p class="card-text"> <b>Promóciós időszak: <br> 2025. október 01. - 2026. június 05.</b></p>
         <p><b><i>A játékszabályzatot <a href="sksm.html">ide kattintva</a> éred el!</p></i></b>
-        <a href="teljesitesinaplo.html"><button>MEGNÉZEM A TELJESÍTÉSI NAPLÓT! </button></a>
+        <a href="teljesitesinaplo.html"><button>MEGNÉZEM A TELJESÍTÉSI NAPLÓT </button></a>
       </div>
     </article> <br>
 
