--- a/befizetesek.html
+++ b/befizetesek.html
@@ -274,6 +274,25 @@
 </div>
         </div>
 </div>
+
+ <div class="card">
+      <div class="card-title"></div>
+      <div class="card-content">
+        <div><span class="label">Befizető: O.Kristóf</span></div>
+        <div><span class="label">Összeg: 600 - Ft</span></div>
+        <div><span class="label">Típus: Bónuszjóváírás</span></div>
+        <div><span class="label">Dátum: 2025.10.15.</span></div>
+        
+        <div>
+          <span class="label2">Tranzakció:</span> #VVB0004
+          <a href="https://drive.google.com/file/d/1EVPN470QQk_PeP5H1T3Ho9kkmN6cdWkP/view?usp=sharing" target="_blank"
+            class="download-link">Letöltés</a>
+
+        </div>
+
+
+      </div>
+    </div>
         <p><b><i>Minden apró számít, tegyél egy picit Te is a repülőmalacba!</i></b></p>
         <p><b><i>Ne feledd! Sok kicsi, sokra megy!</i></b></p>
         <p><b><i>A megtakarításról szóló tranzakciót töltsd le és küldd el a <u>vakaciovagyo@gmail.com</u> email
