--- a/teljesitesinaplo.html
+++ b/teljesitesinaplo.html
@@ -56,10 +56,10 @@
 <body>
   <main>
     <a href="akciok.html" class="close-btn" aria-label="Vissza az akciókhoz">×</a>
-    <h1>TELJESÍTÉSI NAPLÓ</h1>
+   
 
     <section class="naplo-box" aria-labelledby="naplo-cim">
-      <div id="naplo-cim" class="naplo-header">Teljesítési Napló</div>
+      <div id="naplo-cim" class="naplo-header">TELJESÍTÉSI NAPLÓ</div>
 
       <div class="naplo-scroll">
         <table class="naplo-table" aria-label="Teljesítési Napló">
@@ -149,8 +149,17 @@
               <td data-label="Orosz Kristóf – Befizetés"></td>
               <td data-label="Orosz Kristóf – Bónusz"></td>
             </tr>
+                        <tr>
+              <td class="naplo-left naplo-month" data-label="Hónap">2026. június</td>
+              <td data-label="Orosz Sándor – Befizetés"></td>
+              <td data-label="Orosz Sándor – Bónusz"></td>
+              <td data-label="Orosz Szilvia – Befizetés"></td>
+              <td data-label="Orosz Szilvia – Bónusz"></td>
+              <td data-label="Orosz Kristóf – Befizetés"></td>
+              <td data-label="Orosz Kristóf – Bónusz"></td>
+            </tr>
           </tbody>
-          <caption>Áttekintő tábla a 2025. október – 2026. május közötti időszakról.</caption>
+          <caption>Áttekintő táblázat a 2025. október – 2026. június közötti időszakról.</caption>
         </table>
       </div>
     </section>
