--- a/teljesitesinaplo.html
+++ b/teljesitesinaplo.html
@@ -84,7 +84,7 @@
               <td data-label="Orosz Szilvia – Befizetés"></td>
               <td data-label="Orosz Szilvia – Bónusz"></td>
               <td data-label="Orosz Kristóf – Befizetés"><span class="ok"><span class="" aria-hidden="true"></span><span aria-label="Teljesítve" title="Teljesítve">✅</span></span></td>
-              <td data-label="Orosz Kristóf – Bónusz"></td>
+              <td data-label="Orosz Kristóf – Bónusz"><span class="ok"><span class="" aria-hidden="true"></span><span aria-label="Teljesítve" title="Teljesítve">✅</span></span></td>
             </tr>
             <tr>
               <td class="naplo-left naplo-month" data-label="Hónap">2025. november</td>
