--- a/index.html
+++ b/index.html
@@ -602,10 +602,11 @@
   <main>
     <div class="left-text">
       <p class="main-line text2"><b><i>Fogjunk össze 🤝, tegyünk félre 💰, és utazzunk az egyenlítő környékére. 🌎</i></b></p>
+      <br>
       <p class="subline">Ne feledd! Sok kicsi, sokra megy! </p>
 
       <!-- === ÚJ: Visszaszámláló a "Ne feledd!" szöveg alatt === -->
-      <section class="countdown-inline" aria-label="Visszaszámláló"> <br>
+      <section class="countdown-inline" aria-label="Visszaszámláló"> <br> <br>
         <div class="countdown-title color2">VISSZASZÁMLÁLÁS NYÁRIG</div>
         <div class="countdown">
           <div class="countdown-item"><div class="number" id="days2">00</div><div class="label">NAP</div></div>
@@ -618,7 +619,7 @@
     </div>
 
     <div class="right-img">
-      <img src="vakaciovagyo.jpg" alt="Utazás hangulatkép" height="150" width="100">
+      <img src="vakaciovagyo.jpg" alt="Utazás hangulatkép" height="200" width="100">
     </div>
 
     <!-- GOMB külön, hogy mobilon könnyen rendezhető legyen -->
