--- a/befizetesek.html
+++ b/befizetesek.html
@@ -293,7 +293,7 @@
                 <div>
           <span class="label2">Határozat:</span> #0001/2025
           <a href="https://drive.google.com/file/d/1JeBvZnV4BC3pprpHXKIh-n604nCM72BA/view?usp=sharing" target="_blank"
-            class="download-link">Megtekintés</a>
+            class="download-link">Letöltés</a>
 
         </div>
 
