--- a/befizetesek.html
+++ b/befizetesek.html
@@ -295,8 +295,32 @@
           <a href="https://drive.google.com/file/d/1JeBvZnV4BC3pprpHXKIh-n604nCM72BA/view?usp=sharing" target="_blank"
             class="download-link">Letöltés</a>
 
+        </div></div></div>
+<br>
+<b>--------------------------------------- </b>
+<br> <br>
+
+ <div class="card">
+      <div class="card-title"></div>
+      <div class="card-content">
+        <div><span class="label">BÓNUSZJÓVÁÍRÁSOK BANKSZÁMLÁRA</span></div> <br>
+        <div><span class="label">1.O.KRISTÓF</span></div>
+       
+        
+        <div>
+          <span class="label2">Tranzakció:</span> #VVB0001SZ
+          <a href="https://drive.google.com/file/d/17MMgGTnnrOEduB9FHw2EdoH3-PHv78lH/view?usp=sharing" target="_blank"
+            class="download-link">Letöltés</a>
+
         </div>
 
+                <div>
+          <span class="label2">Határozat:</span> #0001/2025SZ
+          <a href="https://drive.google.com/file/d/1yxTqiMMb9noGxlqt-kB2Gji6bQH2Hoj4/view?usp=sharing" target="_blank"
+            class="download-link">Letöltés</a>
+
+        </div>
+        <div><span class="label">Dátum: 2025.10.10.</span></div>
       </div>
     </div>
         <p><b><i>Minden apró számít, tegyél egy picit Te is a repülőmalacba!</i></b></p>
