--- a/befizetesek.html
+++ b/befizetesek.html
@@ -304,7 +304,9 @@
       <div class="card-title"></div>
       <div class="card-content">
         <div><span class="label">BÓNUSZJÓVÁÍRÁSOK BANKSZÁMLÁRA</span></div> <br>
-        <div><span class="label">1.O.KRISTÓF</span></div>
+
+        ---------- <br>
+        <div><span class="label" style="color: green;">1.O.KRISTÓF</span></div>
        
         
         <div>
@@ -321,8 +323,12 @@
 
         </div>
         <div><span class="label">Dátum: 2025.10.10.</span></div>
+
+        ---------- <br>
       </div>
     </div>
+
+
         <p><b><i>Minden apró számít, tegyél egy picit Te is a repülőmalacba!</i></b></p>
         <p><b><i>Ne feledd! Sok kicsi, sokra megy!</i></b></p>
         <p><b><i>A megtakarításról szóló tranzakciót töltsd le és küldd el a <u>vakaciovagyo@gmail.com</u> email
