--- a/szamlalo.html
+++ b/szamlalo.html
@@ -241,7 +241,7 @@
       <img
         id="modalImage"
         class="modal__img"
-        src="blokkszamlalo.jpg"
+        src="blokkszamlalo_10.19.jpg"
         alt="Megnyitott kép – kattints a bezáráshoz"
       />
     </div>
