--- a/teljesitesinaplo_mikulasputtonya.html
+++ b/teljesitesinaplo_mikulasputtonya.html
@@ -55,11 +55,11 @@
 </head>
 <body>
   <main>
-    <a href="akciok.html" class="close-btn" aria-label="Vissza az akciókhoz">×</a>
+    <a href="akcio_mikulasputtonya.html" class="close-btn" aria-label="Vissza az akciókhoz">×</a>
    
 
     <section class="naplo-box" aria-labelledby="naplo-cim">
-      <div id="naplo-cim" class="naplo-header">TELJESÍTÉSI NAPLÓ - SOK KICSI, SOKRA MEGY</div>
+      <div id="naplo-cim" class="naplo-header">TELJESÍTÉSI NAPLÓ - MIKULÁS PUTTONYA</div>
 
       <div class="naplo-scroll">
         <table class="naplo-table" aria-label="Teljesítési Napló">
@@ -78,24 +78,6 @@
           </thead>
           <tbody>
             <tr>
-              <td class="naplo-left naplo-month" data-label="Hónap">2025. október</td>
-              <td data-label="Orosz Sándor – Befizetés"></td>
-              <td data-label="Orosz Sándor – Bónusz"></td>
-              <td data-label="Orosz Szilvia – Befizetés"></td>
-              <td data-label="Orosz Szilvia – Bónusz"></td>
-              <td data-label="Orosz Kristóf – Befizetés"><span class="ok"><span class="" aria-hidden="true"></span><span aria-label="Teljesítve" title="Teljesítve">✅</span></span></td>
-              <td data-label="Orosz Kristóf – Bónusz"><span class="ok"><span class="" aria-hidden="true"></span><span aria-label="Teljesítve" title="Teljesítve">✅</span></span></td>
-            </tr>
-            <tr>
-              <td class="naplo-left naplo-month" data-label="Hónap">2025. november</td>
-              <td data-label="Orosz Sándor – Befizetés"></td>
-              <td data-label="Orosz Sándor – Bónusz"></td>
-              <td data-label="Orosz Szilvia – Befizetés"></td>
-              <td data-label="Orosz Szilvia – Bónusz"></td>
-              <td data-label="Orosz Kristóf – Befizetés"></td>
-              <td data-label="Orosz Kristóf – Bónusz"></td>
-            </tr>
-            <tr>
               <td class="naplo-left naplo-month" data-label="Hónap">2025. december</td>
               <td data-label="Orosz Sándor – Befizetés"></td>
               <td data-label="Orosz Sándor – Bónusz"></td>
@@ -113,53 +95,8 @@
               <td data-label="Orosz Kristóf – Befizetés"></td>
               <td data-label="Orosz Kristóf – Bónusz"></td>
             </tr>
-            <tr>
-              <td class="naplo-left naplo-month" data-label="Hónap">2026. február</td>
-              <td data-label="Orosz Sándor – Befizetés"></td>
-              <td data-label="Orosz Sándor – Bónusz"></td>
-              <td data-label="Orosz Szilvia – Befizetés"></td>
-              <td data-label="Orosz Szilvia – Bónusz"></td>
-              <td data-label="Orosz Kristóf – Befizetés"></td>
-              <td data-label="Orosz Kristóf – Bónusz"></td>
-            </tr>
-            <tr>
-              <td class="naplo-left naplo-month" data-label="Hónap">2026. március</td>
-              <td data-label="Orosz Sándor – Befizetés"></td>
-              <td data-label="Orosz Sándor – Bónusz"></td>
-              <td data-label="Orosz Szilvia – Befizetés"></td>
-              <td data-label="Orosz Szilvia – Bónusz"></td>
-              <td data-label="Orosz Kristóf – Befizetés"></td>
-              <td data-label="Orosz Kristóf – Bónusz"></td>
-            </tr>
-            <tr>
-              <td class="naplo-left naplo-month" data-label="Hónap">2026. április</td>
-              <td data-label="Orosz Sándor – Befizetés"></td>
-              <td data-label="Orosz Sándor – Bónusz"></td>
-              <td data-label="Orosz Szilvia – Befizetés"></td>
-              <td data-label="Orosz Szilvia – Bónusz"></td>
-              <td data-label="Orosz Kristóf – Befizetés"></td>
-              <td data-label="Orosz Kristóf – Bónusz"></td>
-            </tr>
-            <tr>
-              <td class="naplo-left naplo-month" data-label="Hónap">2026. május</td>
-              <td data-label="Orosz Sándor – Befizetés"></td>
-              <td data-label="Orosz Sándor – Bónusz"></td>
-              <td data-label="Orosz Szilvia – Befizetés"></td>
-              <td data-label="Orosz Szilvia – Bónusz"></td>
-              <td data-label="Orosz Kristóf – Befizetés"></td>
-              <td data-label="Orosz Kristóf – Bónusz"></td>
-            </tr>
-                        <tr>
-              <td class="naplo-left naplo-month" data-label="Hónap">2026. június</td>
-              <td data-label="Orosz Sándor – Befizetés"></td>
-              <td data-label="Orosz Sándor – Bónusz"></td>
-              <td data-label="Orosz Szilvia – Befizetés"></td>
-              <td data-label="Orosz Szilvia – Bónusz"></td>
-              <td data-label="Orosz Kristóf – Befizetés"></td>
-              <td data-label="Orosz Kristóf – Bónusz"></td>
-            </tr>
           </tbody>
-          <caption>Áttekintő táblázat a 2025. október – 2026. június közötti időszakról.</caption>
+          <caption>Áttekintő táblázat a 2025. december – 2026. január közötti időszakról.</caption>
         </table>
       </div>
     </section>
