--- a/akcio_mikulasputtonya.html
+++ b/akcio_mikulasputtonya.html
@@ -5,15 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Mikulás Puttonya</title>
   <style>
-      .close-btn {
+    .close-btn {
       position: absolute;
       top: 10px;
       right: 15px;
       text-decoration: none;
       font-size: 24px;
       font-weight: bold;
-      color: #333;
-      background: #f1f1f1;
+      color: white;
+      background: red;
       border: 1px solid #ccc;
       border-radius: 50%;
       width: 35px;
@@ -28,157 +28,191 @@
       color: white;
       border-color: #ff1a1a;
     }
-    :root{
-      --piros:#d00; --feher:#fff; --szoveg:#111;
-      --kep-arany: 23.03 / 10.66;   /* ≈2.1604:1 */
-      --bp: 900px;                  /* ez alatt egyoszlopos (INFO: media query-ben nem használható közvetlenül) */
-      --maxw: 1800px;               /* oldal max szélessége (nagyobb lett) */
+
+    :root {
+      --piros: #d00;
+      --feher: #fff;
+      --szoveg: #111;
+      --maxw: 1400px; /* kisebb max szélesség, hogy minden kiférjen */
     }
 
-    body{
-      margin:0;
-      min-height:100svh;
-      background:center / cover no-repeat url("hatter.jpg");
-      color:var(--szoveg);
-      font-family:system-ui,-apple-system,"Segoe UI",Roboto,Arial,sans-serif;
-      line-height:1.5;
-    }
-    .overlay{ min-height:100svh; background: color-mix(in srgb, #000 15%, transparent); }
-
-    /* Két oszlop desktopon: jobb oldali oszlop számottevően szélesebb */
-    .wrap{
-      display:grid;
-      grid-template-columns: minmax(380px, 1fr) minmax(740px, 1.6fr);
-      gap:2rem;
-      max-width:var(--maxw);
-      margin:0 auto;
-      padding:clamp(16px,3vw,40px);
+    body {
+      margin: 0;
+      height: 100vh;
+      overflow: hidden; /* nincs görgetés */
+      background: center / cover no-repeat url("hatter.jpg");
+      color: var(--szoveg);
+      font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif;
+      line-height: 1.5;
     }
 
-    /* BAL – teljes közép */
-    .left{
-      min-height:min(80svh, 800px);
-      display:flex; flex-direction:column;
-      align-items:center; justify-content:center;
-      text-align:center; gap:1rem;
-    }
-    .left h1{
-      margin:0; font-size:clamp(28px,4vw,48px); color:var(--feher);
-      text-shadow:0 2px 8px rgba(0,0,0,.35);
-    }
-    .left p.lead{
-      margin:0 0 .5rem 0; font-size:clamp(16px,2.2vw,20px); max-width:60ch; color:var(--feher);
-      text-shadow:0 1px 6px rgba(0,0,0,.35);
-    }
-    .btns{ display:flex; flex-wrap:wrap; gap:.75rem; justify-content:center; }
-    .btn{
-      display:inline-block; border:2px solid var(--piros);
-      background:var(--feher); color:var(--piros);
-      text-decoration:none; padding:.75rem 1rem; border-radius:999px; font-weight:700;
-      text-align:center;
+    .overlay {
+      height: 100vh;
+      background: color-mix(in srgb, #000 15%, transparent);
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
-    /* JOBB – teljes közép (vízszint+függőleg) */
-    .right{
-      min-height:min(80svh, 800px);
-      display:flex; align-items:center; justify-content:center;
-      text-align:center;
-    }
-    .gallery{
-      width:100%;
-      display:flex; flex-direction:column; gap:1rem;
-      align-items:center;
-      margin-inline:auto;
+    .wrap {
+      display: grid;
+      grid-template-columns: 1fr 1.4fr;
+      gap: 2rem;
+      max-width: var(--maxw);
+      width: 100%;
+      padding: 1rem 2rem;
+      box-sizing: border-box;
     }
 
-    /* 3 kis kép egymás mellett, alatta a nagy kép – aránytartó */
-    .thumbs{
-      width:100%;
-      display:grid; grid-template-columns:repeat(3, minmax(0,1fr)); gap:1rem;
-    }
-    .thumbs img, .hero img{
-      width:100%; aspect-ratio:var(--kep-arany); object-fit:cover;
-      border-radius:12px; display:block; background:#eee;
-      box-shadow:0 6px 18px rgba(0,0,0,.22);
-    }
-
-    /* ✅ Mobil/kis kijelző: minden egymás alatt, teljes szélesség
-       FONTOS: itt nem használunk var(--bp)-t, hanem konkrét értéket. */
-    @media (max-width: 900px){
-      .wrap{ grid-template-columns:1fr; gap:1.25rem; }
-      .left, .right{ min-height:auto; padding:12px 0; }
-      .btns{ flex-direction:column; align-items:stretch; }
-      .btn{ width:100%; }
-
-      /* képek egymás alatt */
-      .gallery{ align-items:stretch; gap:.875rem; }
-      .thumbs{ grid-template-columns:1fr; gap:.75rem; }
-      .hero{ margin-top:.5rem; }
+    /* Bal oszlop */
+    .left {
+      background: var(--feher);
+      border: 3px solid var(--piros);
+      border-radius: 12px;
+      padding: 1.5rem;
+      color: #000;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      gap: 0.75rem;
     }
 
-    /* Opcionális: fix cm-ben (nyomtatás) – add a képhez class="cm-meret" */
-    .cm-meret{ width:23.03cm; height:10.66cm; aspect-ratio:auto; object-fit:cover; }
-    @media (max-width: 900px){
-  /* Alap: minden szöveg nagyobb és szellősebb */
-  html, body{
-    font-size: 18px;       /* alap 16 → 18 px */
-    line-height: 1.65;
-  }
+    .left h1 {
+      margin: 0;
+      font-size: 2rem;
+      color: var(--piros);
+    }
 
-  /* Címsor és lead kifejezetten nagyobb mobilon */
-  .left h1{
-    font-size: clamp(32px, 6.5vw, 52px);
-  }
-  .left p.lead{
-    font-size: clamp(18px, 4.6vw, 22px);
-  }
+    .left p.lead {
+      margin: 0;
+      font-size: 1rem;
+    }
 
-  /* Gombok felirata is nagyobb, kényelmesebb tappolás */
-  .btn{
-    font-size: 1.0625rem;  /* ~17px a fenti 18px bázison */
-    padding: .9rem 1.1rem; /* kicsit magasabb gomb */
-  }
+    .btns {
+      display: flex;
+      gap: 0.5rem;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
 
-  /* (Ha vannak egyéb szövegek máshol is) */
-  .right, .gallery, .thumbs, .hero{
-    font-size: 1.05rem;    /* +5% boost minden egyéb szövegnek */
-  }
-}
+    .btn {
+      display: inline-block;
+      border: 2px solid var(--piros);
+      background: var(--feher);
+      color: var(--piros);
+      text-decoration: none;
+      padding: 0.5rem 0.9rem;
+      border-radius: 999px;
+      font-weight: 700;
+      font-size: 0.95rem;
+      transition: 0.3s;
+    }
+
+    .btn:hover {
+      background: var(--piros);
+      color: white;
+    }
+
+    /* Jobb oszlop */
+    .right {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .gallery {
+      width: 90%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 0.75rem;
+    }
+
+    .thumbs, .hero {
+      width: 100%;
+      text-align: center;
+    }
+
+    .thumbs img, .hero img {
+      width: 100%;
+      max-width: 260px;
+      border-radius: 10px;
+      object-fit: cover;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.25);
+    }
+
+    .thumbs {
+      display: flex;
+      justify-content: center;
+      gap: 0.5rem;
+      flex-wrap: nowrap;
+    }
+
+    .thumbs p, .hero p {
+      margin: 0.3rem 0;
+      font-weight: bold;
+      color: var(--feher);
+      font-size: 1.1rem;
+    }
+
+    .hero img {
+      max-width: 400px;
+    }
+
+    /* Mobil nézet */
+    @media (max-width: 900px) {
+      body { overflow-y: auto; height: auto; }
+      .wrap { grid-template-columns: 1fr; gap: 1rem; }
+      .gallery { width: 100%; }
+      .thumbs { flex-direction: column; }
+      .hero img { max-width: 100%; }
+    }
   </style>
 </head>
 <body>
 
-    
-     <a href="akciok.html" class="close-btn">×</a>
+<a href="akciok.html" class="close-btn">×</a>
 <br>
-  <div class="overlay">
-    <main class="wrap">
-      <!-- Bal oszlop -->
-      <section class="left" aria-labelledby="focim">
-        <h1 id="focim"><b><i></i>MIKULÁS PUTTONYA</i></b></h1>
-        <p class="lead"><b><i>Tegyél félre 2x 5000-Ft az ajándékokért!</i></b></p>
-       <p class="lead"><b><i>Promóciós időszak: <br>2025. december 01. - 2026. január 05.</i></b></p> 
-        <div class="btns">
-          <a class="btn" href="teljesitesinaplo_mikulasputtonya.html"><b><i>TELJESÍTÉSI NAPLÓ</i></b></a>
-          <a class="btn" href="#masodik-link"><b><i>JÁTÉKSZABÁLYZAT</i></b></a>
-        </div>
-      </section>
+<div class="overlay">
+  <main class="wrap">
+    <!-- Bal oszlop -->
+    <section class="left" aria-labelledby="focim">
+      <h1 id="focim"><b><i>MIKULÁS PUTTONYA</i></b></h1>
+      <p class="lead"><b><i>TEGYÉL FÉLRE 2x 5000-FT AZ AJÁNDÉKOKÉRT!</i></b></p>
+      <p class="lead"><b><i>Promóciós időszak:<br>2025. december 01. - 2026. január 05.</i></b></p>
+      <div class="btns">
+        <a class="btn" href="teljesitesinaplo_mikulasputtonya.html"><b><i>TELJESÍTÉSI NAPLÓ</i></b></a>
+        <a class="btn" href="#masodik-link"><b><i>JÁTÉKSZABÁLYZAT</i></b></a>
+      </div>
+    </section>
 
-      <!-- Jobb oszlop – KÖZÉPEN, nagyobb képek -->
-      <aside class="right" aria-label="Képgaléria">
-        
-        <div class="gallery">
-          <div class="thumbs">
-            <img src="kuponok/Dia1.JPG" alt="Kis kép 1 – 23,03×10,66 cm arány">
-            <img src="kuponok/Dia2.JPG" alt="Kis kép 2 – 23,03×10,66 cm arány">
-            <img src="kuponok/Dia3.JPG" alt="Kis kép 3 – 23,03×10,66 cm arány">
+    <!-- Jobb oszlop -->
+    <aside class="right" aria-label="Képgaléria">
+      <div class="gallery">
+        <div class="thumbs">
+          <div>
+            <p><b><i>FŐBÓNUSZ</i></b></p>
+            <img src="kuponok/Dia1.JPG" alt="Kis kép 1">
           </div>
-          <div class="hero">
-            <img src="kuponok/Dia4.JPG" alt="Nagy kép – 23,03×10,66 cm arány">
+          <div>
+            <p><b><i>FŐBÓNUSZ</i></b></p>
+            <img src="kuponok/Dia2.JPG" alt="Kis kép 2">
+          </div>
+          <div>
+            <p><b><i>FŐBÓNUSZ</i></b></p>
+            <img src="kuponok/Dia3.JPG" alt="Kis kép 3">
           </div>
         </div>
-      </aside>
-    </main>
-  </div>
+        <div class="hero">
+          <p><b><i>NAPI BÓNUSZ</i></b></p>
+          <img src="kuponok/Dia4.JPG" alt="Nagy kép">
+        </div>
+      </div>
+    </aside>
+  </main>
+</div>
+
 </body>
 </html>
