--- a/akcio_mikulasputtonya.html
+++ b/akcio_mikulasputtonya.html
@@ -12,8 +12,8 @@
       text-decoration: none;
       font-size: 24px;
       font-weight: bold;
-      color: white;
-      background: red;
+      color: #333;
+      background: #f1f1f1;
       border: 1px solid #ccc;
       border-radius: 50%;
       width: 35px;
@@ -22,6 +22,7 @@
       align-items: center;
       justify-content: center;
       transition: 0.3s;
+      z-index: 10;
     }
     .close-btn:hover {
       background: #ff4d4d;
@@ -33,13 +34,13 @@
       --piros: #d00;
       --feher: #fff;
       --szoveg: #111;
-      --maxw: 1400px; /* kisebb max szélesség, hogy minden kiférjen */
+      --maxw: 1400px;
     }
 
-    body {
+    html, body {
       margin: 0;
-      height: 100vh;
-      overflow: hidden; /* nincs görgetés */
+      padding: 0;
+      min-height: 100vh;
       background: center / cover no-repeat url("hatter.jpg");
       color: var(--szoveg);
       font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif;
@@ -47,11 +48,13 @@
     }
 
     .overlay {
-      height: 100vh;
+      min-height: 100vh; /* mindig a teljes oldal magasságáig ér */
       background: color-mix(in srgb, #000 15%, transparent);
       display: flex;
       align-items: center;
       justify-content: center;
+      padding: 2rem 0; /* hogy ha nagyobb a tartalom, legyen tér alul-felül */
+      box-sizing: border-box;
     }
 
     .wrap {
@@ -77,6 +80,7 @@
       align-items: center;
       text-align: center;
       gap: 0.75rem;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.25);
     }
 
     .left h1 {
@@ -163,7 +167,6 @@
 
     /* Mobil nézet */
     @media (max-width: 900px) {
-      body { overflow-y: auto; height: auto; }
       .wrap { grid-template-columns: 1fr; gap: 1rem; }
       .gallery { width: 100%; }
       .thumbs { flex-direction: column; }
@@ -174,13 +177,13 @@
 <body>
 
 <a href="akciok.html" class="close-btn">×</a>
-<br>
+
 <div class="overlay">
   <main class="wrap">
     <!-- Bal oszlop -->
     <section class="left" aria-labelledby="focim">
       <h1 id="focim"><b><i>MIKULÁS PUTTONYA</i></b></h1>
-      <p class="lead"><b><i>TEGYÉL FÉLRE 2x 5000-FT AZ AJÁNDÉKOKÉRT!</i></b></p>
+      <p class="lead"><b><i>Tegyél félre 2x 5000-Ft az ajándékokért!</i></b></p>
       <p class="lead"><b><i>Promóciós időszak:<br>2025. december 01. - 2026. január 05.</i></b></p>
       <div class="btns">
         <a class="btn" href="teljesitesinaplo_mikulasputtonya.html"><b><i>TELJESÍTÉSI NAPLÓ</i></b></a>
@@ -193,20 +196,20 @@
       <div class="gallery">
         <div class="thumbs">
           <div>
-            <p><b><i>FŐBÓNUSZ</i></b></p>
+            <p>Főbónusz</p>
             <img src="kuponok/Dia1.JPG" alt="Kis kép 1">
           </div>
           <div>
-            <p><b><i>FŐBÓNUSZ</i></b></p>
+            <p>Főbónusz</p>
             <img src="kuponok/Dia2.JPG" alt="Kis kép 2">
           </div>
           <div>
-            <p><b><i>FŐBÓNUSZ</i></b></p>
+            <p>Főbónusz</p>
             <img src="kuponok/Dia3.JPG" alt="Kis kép 3">
           </div>
         </div>
         <div class="hero">
-          <p><b><i>NAPI BÓNUSZ</i></b></p>
+          <p>Napi bónusz</p>
           <img src="kuponok/Dia4.JPG" alt="Nagy kép">
         </div>
       </div>
