--- a/akcio_mikulasputtonya.html
+++ b/akcio_mikulasputtonya.html
@@ -183,8 +183,8 @@
     <!-- Bal oszlop -->
     <section class="left" aria-labelledby="focim">
       <h1 id="focim"><b><i>MIKULÁS PUTTONYA</i></b></h1>
-      <p class="lead"><b><i>Tegyél félre 2x 5000-Ft az ajándékokért!</i></b></p>
-      <p class="lead"><b><i>Promóciós időszak:<br>2025. december 01. - 2026. január 05.</i></b></p>
+      <p class="lead"><b><i>TEGYÉL FÉLRE <span style="font-size: 25px;">2x 5000-FT</span> AZ AJÁNDÉKOKÉRT!</i></b></p>
+      <p class="lead"><b><i>Promóciós időszak:<br>2025.12.01. - 2026.01.05.</i></b></p>
       <div class="btns">
         <a class="btn" href="teljesitesinaplo_mikulasputtonya.html"><b><i>TELJESÍTÉSI NAPLÓ</i></b></a>
         <a class="btn" href="#masodik-link"><b><i>JÁTÉKSZABÁLYZAT</i></b></a>
@@ -196,22 +196,26 @@
       <div class="gallery">
         <div class="thumbs">
           <div>
-            <p>Főbónusz</p>
+            <p><b><i>Főbónusz</i></b></p>
             <img src="kuponok/Dia1.JPG" alt="Kis kép 1">
           </div>
           <div>
-            <p>Főbónusz</p>
+            <p><b><i>Főbónusz</i></b></p>
             <img src="kuponok/Dia2.JPG" alt="Kis kép 2">
           </div>
           <div>
-            <p>Főbónusz</p>
+            <p><b><i>Főbónusz</i></b></p>
             <img src="kuponok/Dia3.JPG" alt="Kis kép 3">
           </div>
         </div>
         <div class="hero">
-          <p>Napi bónusz</p>
+          <p><b><i>Napi bónusz</i></b></p>
           <img src="kuponok/Dia4.JPG" alt="Nagy kép">
         </div>
+
+
+
+        
       </div>
     </aside>
   </main>
