--- a/akcio_mikulasputtonya.html
+++ b/akcio_mikulasputtonya.html
@@ -183,7 +183,7 @@
     <!-- Bal oszlop -->
     <section class="left" aria-labelledby="focim">
       <h1 id="focim"><b><i>MIKULÁS PUTTONYA</i></b></h1>
-      <p class="lead"><b><i>TEGYÉL FÉLRE <span style="font-size: 25px;">2x 5000-FT</span> AZ AJÁNDÉKOKÉRT!</i></b></p>
+      <p class="lead"><b><i>TEGYÉL FÉLRE <span style="color: red;">2x 5000-FT</span> AZ AJÁNDÉKOKÉRT!</i></b></p>
       <p class="lead"><b><i>Promóciós időszak:<br>2025.12.01. - 2026.01.05.</i></b></p>
       <div class="btns">
         <a class="btn" href="teljesitesinaplo_mikulasputtonya.html"><b><i>TELJESÍTÉSI NAPLÓ</i></b></a>
