--- a/akciok.html
+++ b/akciok.html
@@ -270,6 +270,24 @@
     <p style="text-align: center;"><b><i>Jelenleg nincs rendelkezésre álló akciónk. Tekintsd meg a kiemelt
           ajánlatunkat!</i></b></p>
     <br>
+
+    <!-----
+          <article class="card">
+      <img src="kuponok/akciok_meglepi_01.jpg" alt="Akció">
+      <div class="card-body">
+        <h3 class="card-title">Röfi kereső játék! - HALOWEEN</h3>
+        <p class="card-text"> <b>Promóciós időszak: <br> 2025.10.27. - 2025.11.03</b></p>
+        <p><b><i>A játékszabályzatot <a href="https://drive.google.com/file/d/1eMWqspbH8X-EDkOsVq3L6e9eFSH4lZlM/view?usp=sharing">ide kattintva</a> éred el!</p></i></b>
+        <p><b><i>JÓ KERESÉST!</i></b></p>
+      </div>
+    </article> <br>
+-------->
+
+
+
+
+
+
       </main>
   <footer>
     <a href="archivakciok.html">
