--- a/meglepi.html
+++ b/meglepi.html
@@ -142,7 +142,7 @@
     </div>
 
     <div class="kozepre">
-      <button><i>JÁTÉKSZABÁLYZAT</i></button>
+      <a href="https://drive.google.com/file/d/1eMWqspbH8X-EDkOsVq3L6e9eFSH4lZlM/view?usp=sharing"><button><i>JÁTÉKSZABÁLYZAT</i></button></a>
     </div>
   </div>
 
