--- a/rangom.html
+++ b/rangom.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Rangom</title>
+  <link rel="stylesheet" href="keresdrofit.css">
   <style>
     :root{
       --bg: #fffbe9;
@@ -176,32 +177,6 @@
       text-align: center;
     }
 
- a img {
-    width: 200px;  /* fix méret */
-    height: auto;
-    border-radius: 10px;
-    box-shadow: 0 3px 8px rgba(0,0,0,0.2);
-    transition: transform 0.2s;
-  }
-
-  a img:hover {
-    transform: scale(1.05);
-  }
- .kozepre img {
-    width: 200px;
-    height: auto;
-    border-radius: 10px;
-    box-shadow: 0 3px 8px rgba(0,0,0,0.2);
-    transition: transform 0.2s;
-  }
-
-  .kozepre img:hover {
-    transform: scale(1.05);
-  }
-  img {
-    display: block;
-    margin: 0 auto;
-  }
   </style>
 </head>
 <body>
@@ -238,7 +213,7 @@
     </div>
   </div>
 
-<!-----
+<!----
   <div class="kozepre-kep">
      <a href="meglepi.html"><img class="bottom-img" src="kuponok/meglepimalac.jpg" alt="Repülőmalac" width="500px" height="500px"></a>
 </div>
