--- a/akciok.html
+++ b/akciok.html
@@ -184,18 +184,21 @@
       /* halvány zöld fókuszkeret */
       outline-offset: 2px;
     }
-
     footer {
-
+      margin-top: auto;
       text-align: center;
-      padding: 15px;
-
+      padding: 10px;
+      background-color: #f0f0f0; /* háttérszín tetszés szerint */
     }
 
-    footer h2 {
-      margin: 0;
-      font-size: 18px;
-      color: #333;
+    footer a {
+      text-decoration: none;
+      color: #007bff; /* link színe */
+      font-weight: bold;
+    }
+
+    footer a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
