--- a/archivdokumentumok.html
+++ b/archivdokumentumok.html
@@ -50,47 +50,32 @@
     .card-body { padding: 1.2em; }
     .card-title { margin: 0 0 .5em; font-size: 1.3rem; color: yellowgreen; }
     .card-text { margin: 0 0 1em; }
-    .btn {
-      display: inline-block;
-      padding: .6em 1.2em;
-      background: yellowgreen;
-      color: #fff;
-      font-weight: 600;
-      border-radius: 8px;
-      text-decoration: none;
-      transition: background .2s;
-    }
-    .btn4:hover { background: yellow; }
-        .btn {
-      display: inline-block;
-      padding: .6em 1.2em;
-      background: yellow;
-      border-radius: 2px;
-      color: #fff;
-      font-weight: 600;
-      border-radius: 8px;
-      text-decoration: none;
-      transition: background .2s;
-    }
-    .btn4:hover { background: yellow; }
-    button {
-  background-color: #22c55e;   /* zöld háttér */
-  color: #fff;                 /* fehér szöveg */
-  border: none;
-  padding: 10px 16px;
-  border-radius: 9999px;       /* teljesen lekerekített */
+  /* GOMB STÍLUS – lekerekített, piros szegélyű, szürke hátterű, sárga szövegű */
+button,
+.btn,
+.btn4,
+a.btn {
+  display: inline-block;
+  background-color: #555;      /* szürke háttér */
+  color: yellow;               /* sárga szöveg */
+  padding: 10px 18px;
+  border: 2px solid red;       /* piros szegély */
+  border-radius: 25px;         /* lekerekített forma */
+  text-decoration: none;
   font-weight: 600;
   cursor: pointer;
-  transition: background-color .2s ease;
+  transition: all 0.3s ease;
 }
 
-button:hover {
-  background-color: #16a34a;   /* sötétebb zöld hover-re */
-}
-
-button:focus {
-  outline: 2px solid #bbf7d0;  /* halvány zöld fókuszkeret */
-  outline-offset: 2px;
+/* Hover hatás */
+button:hover,
+.btn:hover,
+.btn4:hover,
+a.btn:hover {
+  background-color: #777;      /* világosabb szürke */
+  color: #fff700;              /* világosabb sárga szöveg */
+  border-color: darkred;       /* sötétebb piros szegély */
+  transform: scale(1.05);      /* finom nagyítás */
 }
 
     footer {
@@ -135,13 +120,19 @@ button:focus {
      <a href="tovabbiak.html" class="close-btn">×</a>
 
      <h1>ARCHÍV DOKUMENTUMOK</h1>
+
+<!----
      <h2 style="text-align: center;">JÁTÉKSZABÁLYZATOK</h2>
+-------->
+    <p style="text-align: center;"><b><i>Jelenleg nincsenek rendelkezésre álló archív dokumentumok.</i></b></p>
+    <br>
+
 
 <!-----
       <div class="btn-row" style="text-align: center; font-size: 20px;">
 
     <a class="btn4" href="#" ><b><i>PONTGYŰJTŐ RENDSZER</i></b></i> <br></a>
------>
+--------->
   <!-- EGY KÁRTYA -->
 
 
