--- a/tovabbiak.html
+++ b/tovabbiak.html
@@ -240,19 +240,22 @@
       color: white;
       /* fehér szöveg */
     }
-footer {
-  margin-top: auto;       /* ez tolja az aljára */
-  padding: 1rem;          /* helyette nem kell 15px + 1rem, elég 1rem */
-  background: #cfe0ff;    /* világoskék háttér */
-  text-align: center;
-}
+    footer {
+      margin-top: auto;
+      text-align: center;
+      padding: 10px;
+      background-color: #f0f0f0; /* háttérszín tetszés szerint */
+    }
 
-footer h2 {
-  margin: 0;
-  font-size: 18px;
-  color: #333;
-}
+    footer a {
+      text-decoration: none;
+      color: #007bff; /* link színe */
+      font-weight: bold;
+    }
 
+    footer a:hover {
+      text-decoration: underline;
+    }
     .btn-row {
       display: grid;
       grid-template-columns: 1fr;
@@ -382,12 +385,10 @@ footer h2 {
     }
   </script>
 
-<!--
-     <a href="archivdokumentumok.html">
-      <h3 style="font-size: 15px;"><b><i>Archív dokumentumok</i></b></h3>
-    </a>
+ <footer>
+    <a href="archivdokumentumok.html"><b><i>Archívum</i></b></a>
+  </footer>
 
-    ----->
 </body>
 
 </html>
