--- a/archivdokumentumok.html
+++ b/archivdokumentumok.html
@@ -144,6 +144,7 @@
       font-weight: 600;
       cursor: pointer;
       transition: all 0.3s ease;
+      margin: 10px;
     }
 
     /* Hover hatás */
@@ -152,6 +153,7 @@
     .btn4:hover,
     a.btn:hover {
       background-color: #777;
+      margin: 10px;
       /* világosabb szürke */
       color: #fff700;
       /* világosabb sárga szöveg */
@@ -210,8 +212,21 @@
 
   <h2 style="text-align: center;">JÁTÉKSZABÁLYZATOK</h2>
 
+<!------
   <p style="text-align: center;"><b><i>Jelenleg nincsenek rendelkezésre álló archív játékszabályzatok.</i></b></p>
   <br>
+  ------->
+
+        <div class="btn-row" style="text-align: center; font-size: 20px;">
+
+    <a class="btn4" href="https://drive.google.com/file/d/1nLXXotgucC8YH5Xrd5QXdX9u_WLg8Wm6/view?usp=sharing" ><b><i>RAKJ FÉLRE EGY KIS APRÓT AZ EXTRA BÓNUSZÉRT</b></i> <br></a> <br>
+    
+    <div class="btn-row" style="text-align: center; font-size: 20px;">
+
+    <a class="btn4" href="https://drive.google.com/file/d/1_IFT5lJbY7-yewXKbQ0572Y9n6eK32TV/view?usp=sharing" ><b><i>TUDTAD LEMONDOK A TARTOZÁSOD EGY RÉSZÉRŐL</b></i> <br></a>
+
+
+    
   <h2 style="text-align: center;">BIZONYLATOK</h2>
 
   <p style="text-align: center;"><b><i>Jelenleg nincsenek rendelkezésre álló archív bizonylatok.</i></b></p>
@@ -223,11 +238,8 @@
   <br>
 
 
-  <!-----
-      <div class="btn-row" style="text-align: center; font-size: 20px;">
 
-    <a class="btn4" href="#" ><b><i>PONTGYŰJTŐ RENDSZER</i></b></i> <br></a>
---------->
+
   <!-- EGY KÁRTYA -->
 
 
