--- a/archivakciok.html
+++ b/archivakciok.html
@@ -219,7 +219,9 @@
       <div class="card-body">
         <h3 class="card-title"> Tudtad? Lemondok a tartozásod egy részéről!</h3>
         <p class="card-text"> <b> Annak egy részét félreteszem a saját perselyszámlámra a nyaralási alapba!
-          </b> <br> Hiszen sok kicsi sokra megy! <br> <br> <i>Érvényes: Visszavonásig</i></p>
+          </b></p>
+         <p><b><i>A játékszabályzatot <a href="https://drive.google.com/file/d/1_IFT5lJbY7-yewXKbQ0572Y9n6eK32TV/view?usp=sharing">ide kattintva</a> éred el!</p></i></b>
+        </b>Hiszen sok kicsi sokra megy! <br> <br> <i>Érvényes: Visszavonásig</i></p>
       </div>
     </article><br>
 
@@ -229,9 +231,11 @@
       <div class="card-body">
         <h3 class="card-title"> Rakj félre egy kis aprót az extra bónuszért!</h3>
         <p class="card-text"> <span style="color: black"><b>Ha 2025.09.30.-ig félreraksz legalább 10.000- Ft-ot, akkor
-              most extra 5.000- Ft -ot írunk jóvá a nyaralási alapba! </b> <br> Forrás: Fillérfaló - Orosz Kristóf <br>
+              most extra 5.000- Ft -ot írunk jóvá a nyaralási alapba! </b> <br> Forrás: Fillérfaló - Orosz Kristóf <br> 
+                   <p><b><i>A játékszabályzatot <a href="https://drive.google.com/file/d/1nLXXotgucC8YH5Xrd5QXdX9u_WLg8Wm6/view?usp=sharing">ide kattintva</a> éred el!</p></i></b>
             Megj.: Az akció más akciókkal nem összevonható és O.Kristófnak nem jár bónusz. <br><br> <i>Érvényes: 2025.
               szeptember 30.-ig</i></p>
+          
       </div>
     </article> <br>
 
