--- a/tovabbiak.html
+++ b/tovabbiak.html
@@ -360,10 +360,12 @@
   <div class="btn-row">
     <a class="btn btn2" href="https://drive.google.com/file/d/11o7C-0eG_CLEBjWTG_idEr0DdObjP89C/view?usp=sharing"> 2025.
       SZEPTEMBER</a>
+
+          <a class="btn btn2" href="https://drive.google.com/file/d/1xWpA-nl1qU3lCDR30lCBjN5sW3QIzaPP/view?usp=sharing"> 2025.
+      OKTÓBER</a>
   </div>
 
-
-
+ 
   <br>
   <h2><i>JÁTÉKSZABÁLYZATOK</i></h2>
 
