--- a/archivakciok.html
+++ b/archivakciok.html
@@ -213,14 +213,31 @@
   <!-- EGY KÁRTYA -->
   <main class="container">
     <h1>ARCHÍV AKCIÓK</h1>
-
+  <!-----
+  <article class="card">
+      <img src="lezart3.jpg" alt="Akció">
+      <div class="card-body">
+        <h3 class="card-title">Röfi kereső játék! - HALOWEEN</h3>
+        <p class="card-text"> <b>Promóciós időszak: <br> 2025.10.27. - 2025.11.03</b></p>
+        <p class="card-text"> <b>Röfit az alábbi menüpontok alatt találhatod meg: </b> <br>
+          <i>- Számláló / Befizetések / Éld újra / Akciók / Rangom / Információk / Továbbiak</i>
+        </p>
+        <p><b><i>A játékszabályzatot <a
+                href="https://drive.google.com/file/d/1eMWqspbH8X-EDkOsVq3L6e9eFSH4lZlM/view?usp=sharing">ide
+                kattintva</a> éred el!</p></i></b>
+        <p><b><i>JÓ KERESÉST!</i></b></p>
+      </div>
+    </article> <br>
+--------->
     <article class="card">
       <img src="lezárt2.jpg" alt="Akció">
       <div class="card-body">
         <h3 class="card-title"> Tudtad? Lemondok a tartozásod egy részéről!</h3>
         <p class="card-text"> <b> Annak egy részét félreteszem a saját perselyszámlámra a nyaralási alapba!
           </b></p>
-         <p><b><i>A játékszabályzatot <a href="https://drive.google.com/file/d/1_IFT5lJbY7-yewXKbQ0572Y9n6eK32TV/view?usp=sharing">ide kattintva</a> éred el!</p></i></b>
+        <p><b><i>A játékszabályzatot <a
+                href="https://drive.google.com/file/d/1_IFT5lJbY7-yewXKbQ0572Y9n6eK32TV/view?usp=sharing">ide
+                kattintva</a> éred el!</p></i></b>
         </b>Hiszen sok kicsi sokra megy! <br> <br> <i>Érvényes: Visszavonásig</i></p>
       </div>
     </article><br>
@@ -231,11 +248,13 @@
       <div class="card-body">
         <h3 class="card-title"> Rakj félre egy kis aprót az extra bónuszért!</h3>
         <p class="card-text"> <span style="color: black"><b>Ha 2025.09.30.-ig félreraksz legalább 10.000- Ft-ot, akkor
-              most extra 5.000- Ft -ot írunk jóvá a nyaralási alapba! </b> <br> Forrás: Fillérfaló - Orosz Kristóf <br> 
-                   <p><b><i>A játékszabályzatot <a href="https://drive.google.com/file/d/1nLXXotgucC8YH5Xrd5QXdX9u_WLg8Wm6/view?usp=sharing">ide kattintva</a> éred el!</p></i></b>
+              most extra 5.000- Ft -ot írunk jóvá a nyaralási alapba! </b> <br> Forrás: Fillérfaló - Orosz Kristóf <br>
+            <p><b><i>A játékszabályzatot <a
+                    href="https://drive.google.com/file/d/1nLXXotgucC8YH5Xrd5QXdX9u_WLg8Wm6/view?usp=sharing">ide
+                    kattintva</a> éred el!</p></i></b>
             Megj.: Az akció más akciókkal nem összevonható és O.Kristófnak nem jár bónusz. <br><br> <i>Érvényes: 2025.
               szeptember 30.-ig</i></p>
-          
+
       </div>
     </article> <br>
 
