--- a/archivakciok.html
+++ b/archivakciok.html
@@ -213,12 +213,12 @@
   <!-- EGY KÁRTYA -->
   <main class="container">
     <h1>ARCHÍV AKCIÓK</h1>
-  <!-----
+ 
   <article class="card">
       <img src="lezart3.jpg" alt="Akció">
       <div class="card-body">
         <h3 class="card-title">Röfi kereső játék! - HALOWEEN</h3>
-        <p class="card-text"> <b>Promóciós időszak: <br> 2025.10.27. - 2025.11.03</b></p>
+        <p class="card-text"> <b>Promóciós időszak: <br> 2025.10.27. - 2025.11.03. 22:00</b></p>
         <p class="card-text"> <b>Röfit az alábbi menüpontok alatt találhatod meg: </b> <br>
           <i>- Számláló / Befizetések / Éld újra / Akciók / Rangom / Információk / Továbbiak</i>
         </p>
@@ -228,7 +228,7 @@
         <p><b><i>JÓ KERESÉST!</i></b></p>
       </div>
     </article> <br>
---------->
+
     <article class="card">
       <img src="lezárt2.jpg" alt="Akció">
       <div class="card-body">
