--- a/befizetesek.html
+++ b/befizetesek.html
@@ -275,6 +275,8 @@
         </div>
 </div>
 
+
+
  <div class="card">
       <div class="card-title"></div>
       <div class="card-content">
@@ -293,6 +295,46 @@
                 <div>
           <span class="label2">Határozat:</span> #0001/2025
           <a href="https://drive.google.com/file/d/1JeBvZnV4BC3pprpHXKIh-n604nCM72BA/view?usp=sharing" target="_blank"
+            class="download-link">Letöltés</a>
+
+        </div></div></div>
+
+    <div class="card">
+      <div class="card-title"></div>
+      <div class="card-content">
+        <div><span class="label">Befizető: O.Kristóf</span></div>
+        <div><span class="label">Összeg: 3.000 - Ft</span></div>
+        <div><span class="label">Típus: Persely</span></div>
+        <div><span class="label">Dátum: 2025.11.03.</span></div>
+        <div><span class="label">Pontok: <br>+ 0 pont</span></div>
+        <div>
+          <span class="label2">Tranzakció:</span> #VVB0005
+          <a href="https://drive.google.com/file/d/1TSzKMgo6aNg1-P5vCEKv0HZ-n7vFuXvm/view?usp=sharing" target="_blank"
+            class="download-link">Letöltés</a>
+</div>
+        </div>
+</div>
+
+
+
+         <div class="card">
+      <div class="card-title"></div>
+      <div class="card-content">
+        <div><span class="label">Befizető: O.Kristóf</span></div>
+        <div><span class="label">Összeg: 2.000 - Ft</span></div>
+        <div><span class="label">Típus: Bónuszjóváírás</span></div>
+        <div><span class="label">Dátum: 2025.11.03.</span></div>
+        
+        <div>
+          <span class="label2">Tranzakció:</span> #VVB0006
+          <a href="https://drive.google.com/file/d/1EK0geUnmdrvbD4D5Bf8x8IJpnQgBlB_K/view?usp=sharing" target="_blank"
+            class="download-link">Letöltés</a>
+
+        </div>
+
+                <div>
+          <span class="label2">Határozat:</span> #0002/2025
+          <a href="https://drive.google.com/file/d/1ltUu2ve4NcyPvfDPQMhXkX_BZWyliP31/view?usp=sharing" target="_blank"
             class="download-link">Letöltés</a>
 
         </div></div></div>
